Added spatial navigation dependency.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <script type="application/javascript" src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
 <script type="application/javascript" src="bower_components/flickity/dist/flickity.pkgd.min.js"></script>
 <script type="application/javascript" src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
+<script type="application/javascript" src="bower_components/js-spatial-navigation/spatial_navigation.js"></script>
 <script type="application/javascript" src="js/index.js"></script>
 
 </body>
