--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>TV</title>
+<title>TV App Boilerplate</title>
 <link rel="stylesheet" href="bower_components/flickity/dist/flickity.css" media="screen">
 <link rel="stylesheet" href="css/index.css" media="screen">
 </head>
