Use id instead of class in top-level elements.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <html>
 <head>
-<title>TV App Boilerplate</title>
-<link rel="stylesheet" href="bower_components/flickity/dist/flickity.css" media="screen">
-<link rel="stylesheet" href="css/index.css" media="screen">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>TV App Boilerplate</title>
+  <link rel="stylesheet" href="bower_components/flickity/dist/flickity.css"
+        media="screen"/>
+  <link rel="stylesheet" href="css/index.css" media="screen"/>
 </head>
 <body>
-<div class="banners">
+<div id="banners">
   <div class="banner"></div>
   <div class="banner"></div>
   <div class="banner"></div>
 </div>
 
-<div class="collections">
+<div id="collections">
   <div class="collection-col">
     <div class="collection"></div>
     <div class="collection"></div>
@@ -46,7 +49,7 @@
   </div>
 </div>
 
-<div class="items">
+<div id="items">
   <div class="item"></div>
   <div class="item"></div>
   <div class="item"></div>
@@ -60,11 +63,16 @@
   <div class="navigation"><a href="index.html#2">Next</a></div>
 </div>
 
-<script type="application/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-<script type="application/javascript" src="bower_components/pleasejs/dist/Please.js"></script>
-<script type="application/javascript" src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
-<script type="application/javascript" src="bower_components/flickity/dist/flickity.pkgd.min.js"></script>
-<script type="application/javascript" src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
+<script type="application/javascript"
+        src="bower_components/jquery/dist/jquery.min.js"></script>
+<script type="application/javascript"
+        src="bower_components/pleasejs/dist/Please.js"></script>
+<script type="application/javascript"
+        src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
+<script type="application/javascript"
+        src="bower_components/flickity/dist/flickity.pkgd.min.js"></script>
+<script type="application/javascript"
+        src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
 <script type="application/javascript" src="js/index.js"></script>
 
 </body>
