Scroll to item when navigate.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         src="bower_components/flickity/dist/flickity.pkgd.min.js"></script>
 <script type="application/javascript"
         src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
-<script type="application/javascript" 
+<script type="application/javascript"
+        src="bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+<script type="application/javascript"
         src="bower_components/js-spatial-navigation/spatial_navigation.js"></script>
 <script type="application/javascript" src="js/index.js"></script>
 
