Separate popup relevant code, minor RWD fix.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="bower_components/flickity/dist/flickity.css"
         media="screen"/>
+  <link rel="stylesheet" href="css/popup.css" media="screen"/>
   <link rel="stylesheet" href="css/index.css" media="screen"/>
 </head>
 <body>
@@ -64,7 +65,7 @@
   <div class="item"></div>
   <div class="navigation"><a href="index.html#2">Next</a></div>
 </div>
-
+<!-- Begin of Popup -->
 <div id="popup" class="hide">
   <div id="item-content">
     <div id="item-main">
@@ -240,6 +241,7 @@
     </ul>
     <div id="close-popup"><i class="fa fa-times fa-2x"></i></div>
   </div>
+<!-- End of Popup -->
 </div>
 
 <script type="application/javascript"
@@ -259,7 +261,8 @@
 <!-- lazy loading -->
 <script type="application/javascript"
         src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
-<!-- main script -->
+<!-- main scripts -->
+<script type="application/javascript" src="js/popup.js"></script>
 <script type="application/javascript" src="js/index.js"></script>
 
 </body>
