Added comments for external libs.

--- a/index.html
+++ b/index.html
@@ -263,8 +263,10 @@
 <!-- lazy loading -->
 <script type="application/javascript"
         src="bower_components/jquery-infinite-scroll/jquery.infinitescroll.min.js"></script>
+<!-- scroll animation -->
 <script type="application/javascript"
         src="bower_components/jquery.scrollTo/jquery.scrollTo.min.js"></script>
+<!-- spatial navigation -->
 <script type="application/javascript"
         src="bower_components/js-spatial-navigation/spatial_navigation.js"></script>
 <!-- main scripts -->
